# iModes

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/kimi/: kimi.py
app/openai_whisper/: openai_whisper.py
